[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/rock.png" type="Texture" id=1]
[ext_resource path="res://sprites/scissors.png" type="Texture" id=2]
[ext_resource path="res://sprites/paper.png" type="Texture" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="BRock" type="Button" parent="."]
margin_left = 283.982
margin_top = 325.306
margin_right = 335.982
margin_bottom = 371.306
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BScissors" type="Button" parent="."]
margin_left = 80.2408
margin_top = 320.917
margin_right = 132.241
margin_bottom = 366.917
rect_scale = Vector2( 2, 2 )
shortcut_in_tooltip = false
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BPaper" type="Button" parent="."]
margin_left = 455.381
margin_top = 325.019
margin_right = 507.381
margin_bottom = 371.019
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 6.34039
margin_top = 33.6385
margin_right = 650.34
margin_bottom = 86.6385
text = "The game is started! 
Select an action"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 169.999
margin_top = 106.236
margin_right = 472.999
margin_bottom = 255.236
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_game_action0" type="Button" parent="Panel"]
margin_left = 94.0
margin_top = 24.0
margin_right = 205.0
margin_bottom = 114.0
icon = ExtResource( 1 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_game_action1" type="Button" parent="Panel"]
margin_left = 93.9449
margin_top = 21.9727
margin_right = 205.945
margin_bottom = 111.973
icon = ExtResource( 2 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_game_action2" type="Button" parent="Panel"]
margin_left = 91.9449
margin_top = 21.8167
margin_right = 204.945
margin_bottom = 114.817
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 79.0084
margin_top = 3.4106
margin_right = 220.008
margin_bottom = 27.4106
text = "bot action"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="result" type="Label" parent="Panel"]
margin_left = 25.9382
margin_top = 115.069
margin_right = 273.938
margin_bottom = 148.069
text = " "
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BRock" to="." method="_on_BRock_pressed"]
[connection signal="pressed" from="BScissors" to="." method="_on_BScissors_pressed"]
[connection signal="pressed" from="BPaper" to="." method="_on_BPaper_pressed"]
